volexc/tests/ui/recovery_union_multiple.vol
// Multiple errors in same union - recovery should report all
union Result {
    Ok(string) = 1
    Err(u32) = 2;
    Pending = 3
    Unknown(bool) = 4;
}
